--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/jwt": "^9.1.0",
     "@prisma/client": "^6.8.2",
     "@types/node": "^22.15.29",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
     "prisma": "^6.8.2"
