--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "prisma": "^6.8.2"
   },
   "devDependencies": {
+    "supertest": "^7.1.1",
+    "vitest": "^3.2.1",
     "zod": "^3.25.49"
   }
 }
