--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tsx ./src/server.ts"
+    "dev": "npx tsx --watch ./src/server.ts",
+    "migrate:dev": "npx prisma migrate dev"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +16,15 @@
     "@fastify/jwt": "^9.1.0",
     "@prisma/client": "^6.8.2",
     "@types/node": "^22.15.29",
+    "@types/supertest": "^6.0.3",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
     "prisma": "^6.8.2"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
+    "eslint": "^8.57.1",
     "supertest": "^7.1.1",
     "vitest": "^3.2.1",
     "zod": "^3.25.49"
